--- a/debian/rules
+++ b/debian/rules
@@ -514,6 +514,15 @@ install-skiboot: b/skiboot/skiboot.lid
 	install -m 0644 -t "${sysdatadir}" $<
 sysdata-components += skiboot
 
+build-vof: b/vof/vof.bin
+b/vof/vof.bin:
+	mkdir -p b
+	cp -al pc-bios/vof b/
+	${MAKE} -C b/vof CROSS=${PPC64_CROSSPFX}
+install-vof: b/vof/vof.bin
+	install -m 0644 -t "${sysdatadir}" $<
+sysdata-components += vof
+
 ### x86 optionrom
 build-x86-optionrom: b/optionrom/built
 b/optionrom/built:
