move ppc dtb firmware files from qemu-system-ppc to qemu-system-data
device-tree-compiler is now needed in build-indep-depends, not in build-depends

--- a/debian/rules
+++ b/debian/rules
@@ -135,11 +135,6 @@ b/qemu/configured: configure
 build-qemu: b/qemu/built
 b/qemu/built: b/qemu/configured
 	$(MAKE) -C b/qemu V=${V}
-ifeq (${enable_system},enable)
-	rm -f b/qemu/pc-bios/bamboo.dtb b/qemu/pc-bios/canyonlands.dtb
-	dtc -o b/qemu/pc-bios/bamboo.dtb pc-bios/bamboo.dts
-	dtc -o b/qemu/pc-bios/canyonlands.dtb pc-bios/canyonlands.dts
-endif
 	touch $@
 
 define inst-system
@@ -616,6 +611,18 @@ install-opensbi: build-opensbi
 	install -m 0644 b/opensbi/platform/generic/firmware/fw_dynamic.bin ${sysdatadir}/opensbi-riscv64-generic-fw_dynamic.bin
 	install -m 0644 b/opensbi/platform/generic/firmware/fw_dynamic.elf ${sysdatadir}/opensbi-riscv64-generic-fw_dynamic.elf
 sysdata-components += opensbi
+
+### misc firmware
+build-misc: b/misc/.built
+b/misc/.built: | b
+	mkdir -p b/misc
+	dtc -o b/misc/bamboo.dtb pc-bios/bamboo.dts
+	dtc -o b/misc/canyonlands.dtb pc-bios/canyonlands.dts
+	touch $@
+install-misc: build-misc
+	install -m 0644 b/misc/bamboo.dtb b/misc/canyonlands.dtb \
+		${sysdatadir}
+sysdata-components += misc
 
 build-indep: $(addprefix build-, ${sysdata-components})
 
