--- a/debian/rules
+++ b/debian/rules
@@ -513,8 +513,7 @@ install-skiboot: b/skiboot/skiboot.lid
 sysdata-components += skiboot
 
 build-vof: b/vof/vof.bin
-b/vof/vof.bin:
-	mkdir -p b
+b/vof/vof.bin: | b
 	cp -al pc-bios/vof b/
 	${MAKE} -C b/vof CROSS=${PPC64_CROSSPFX}
 install-vof: b/vof/vof.bin
@@ -572,7 +571,7 @@ sysdata-components += palcode-clipper
 
 ### SLOF
 build-slof: b/SLOF/boot_rom.bin
-b/SLOF/boot_rom.bin:
+b/SLOF/boot_rom.bin: | b
 	cp -al roms/SLOF b/
 	env -u LDFLAGS -u CFLAGS $(MAKE) -C b/SLOF qemu CROSS=${PPC64_CROSSPFX} V=${V}
 install-slof: b/SLOF/boot_rom.bin
@@ -591,7 +590,7 @@ sysdata-components += s390x-fw
 
 ### hppa-firmware (roms/seabios-hppa)
 build-hppa-fw: b/hppafw/hppa-firmware.img
-b/hppafw/hppa-firmware.img: | b
+b/hppafw/hppa-firmware.img:
 	mkdir -p b/hppafw
 	${MAKE} -C roms/seabios-hppa OUT=../../b/hppafw/ PYTHON=python3 parisc
 	hppa-linux-gnu-strip -R.note -R.comment $@
@@ -602,7 +601,7 @@ sysdata-components += hppa-fw
 ### opensbi (riscv firmware)
 # we only build v64 variants, not v32
 build-opensbi: b/opensbi/.built
-b/opensbi/.built: | b
+b/opensbi/.built:
 	mkdir -p b/opensbi
 	${MAKE} -C roms/opensbi O=../../b/opensbi CROSS_COMPILE=${RISCV64_CROSSPFX} V=${V} PLATFORM=generic
 	${RISCV64_CROSSPFX}strip --strip-unneeded -R.comment -R.note b/opensbi/platform/generic/firmware/fw_dynamic.elf
@@ -614,7 +613,7 @@ sysdata-components += opensbi
 
 ### misc firmware
 build-misc: b/misc/.built
-b/misc/.built: | b
+b/misc/.built:
 	mkdir -p b/misc
 	dtc -o b/misc/bamboo.dtb pc-bios/bamboo.dts
 	dtc -o b/misc/canyonlands.dtb pc-bios/canyonlands.dts
