--- a/debian/rules
+++ b/debian/rules
@@ -330,7 +330,7 @@ b/xen/configured: configure
 	cd b/xen && \
 	    ../../configure ${common_configure_opts} --disable-user \
 		--enable-xen \
-		--target-list="i386-softmmu x86_64-softmmu"
+		--target-list="i386-softmmu x86_64-softmmu" \
 		--enable-modules \
 		--enable-module-upgrades \
 		$(shell sh debian/extract-config-opts \
