d/rules: disable building docs for xen build and use main QEMU_CONFIGURE_OPTIONS for xen again

--- a/debian/rules
+++ b/debian/rules
@@ -328,14 +328,16 @@ b/xen/configured: configure
 	#    (could in theory also enable arm/aarch64)
 	rm -rf b/xen; mkdir -p b/xen
 	cd b/xen && \
-	    ../../configure ${common_configure_opts} --disable-user \
+	    ../../configure ${common_configure_opts} \
+		--disable-user \
+		--disable-docs \
 		--enable-xen \
 		--target-list="i386-softmmu x86_64-softmmu" \
 		--enable-modules \
 		--enable-module-upgrades \
 		$(shell sh debian/extract-config-opts \
 		    $(DEB_HOST_ARCH_OS)-$(DEB_HOST_ARCH) debian/control) \
-		${QEMU_XEN_CONFIGURE_OPTIONS}
+		${QEMU_CONFIGURE_OPTIONS}
 	touch $@
 build-xen: b/xen/built
 b/xen/built: b/xen/configured
