--- a/debian/rules
+++ b/debian/rules
@@ -621,8 +621,16 @@ $(addprefix install-, ${sysdata-components}): b/install-indep-prep.stamp | ${sys
 binary-indep: b/install-indep-prep.stamp \
 	        $(addprefix install-, ${sysdata-components}) \
 		| ${sysdatadir}
-	dh_install -i
-	rm -f debian/qemu-system-data/usr/share/qemu/keymaps/Makefile
+# dh_install can't rename files so we do things here
+#	dh_install -i
+# qemu-system-data
+	install -Dp ui/icons/qemu.svg \
+	 debian/qemu-system-data/usr/share/icons/hicolor/scalable/apps/qemu.svg
+# icon for sdl2 ui (non-sdl-image version)
+	install -Dp ui/icons/qemu_32x32.png \
+	 debian/qemu-system-data/usr/share/icons/hicolor/32x32/apps/qemu.png
+	install -Dp -t debian/qemu-system-data/usr/share/qemu \
+	 $$(ls -1 pc-bios/keymaps/* | fgrep -v /meson.build)
 	dh_installdocs -i
 	dh_installchangelogs -i
 	dh_lintian -i
