--- a/debian/rules
+++ b/debian/rules
@@ -58,7 +58,7 @@ common_configure_opts = \
 	--libexecdir=/usr/lib/qemu \
 	--firmwarepath=${FIRMWAREPATH} \
 	--localstatedir=/var \
-	--disable-blobs \
+	--disable-install-blobs \
 	--disable-strip \
 	--interp-prefix=/etc/qemu-binfmt/%M \
 	--localstatedir=/var \
