d/rules: bump skiboot version for qemu v6.2.0
Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/debian/rules
+++ b/debian/rules
@@ -473,8 +473,8 @@ sysdata-components += openbios
 ### powernv firmware in roms/skiboot
 # skiboot's make_version.sh derives its version from the git tag
 # we do not have git repository in the source, so we have to keep it somewhere
-ifeq (${DEB_VERSION_UPSTREAM},6.1+dfsg)
-SKIBOOT_VERSION = v6.4
+ifeq (${DEB_VERSION_UPSTREAM},6.2+dfsg)
+SKIBOOT_VERSION = v6.8-104-g820d43c0
 else
 $(error Check roms/skiboot version)
 endif
