d/rules: select default PARISC config for hppa-firmware
We need CONFIG_PARISC to be set for:
 target-$(CONFIG_PARISC) += $(OUT)hppa-firmware.img
But in roms/seabios-hppa/.config it is:
 # CONFIG_PARISC is not set

This was formerly delivered as part of qemu tarball, but no more:
$ tar tf qemu-6.0.0.tar.xz | grep -e 'seabios-hppa/\.config'
qemu-6.0.0/roms/seabios-hppa/.config
$ tar tf qemu-6.1.0.tar.xz | grep -e 'seabios-hppa/\.config'
qemu-6.1.0/roms/seabios-hppa/.config
$ tar tf qemu-6.2.0.tar.xz | grep -e 'seabios-hppa/\.config'
<nothing>

This is due to commit
https://gitlab.com/qemu-project/qemu/-/commit/e770b8cf76083cc51497b854e73f0a9bb92d1bc7
And the reference no more shipping a .config
https://gitlab.com/qemu-project/seabios-hppa/-/tags/seabios-hppa-v2

Select what we want PARISC and let kconfig pick the rest from defaults.

Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/debian/rules
+++ b/debian/rules
@@ -569,6 +569,8 @@ sysdata-components += s390x-fw
 build-hppa-fw: b/hppafw/hppa-firmware.img
 b/hppafw/hppa-firmware.img:
 	mkdir -p b/hppafw
+	echo CONFIG_PARISC=y > roms/seabios-hppa/.config
+	${MAKE} -C roms/seabios-hppa olddefconfig
 	${MAKE} -C roms/seabios-hppa OUT=../../b/hppafw/ PYTHON=python3 parisc
 	hppa-linux-gnu-strip -R.note -R.comment $@
 install-hppa-fw: b/hppafw/hppa-firmware.img
