d/rules: rename xen build-targets to ubuntu-xen

--- a/debian/rules
+++ b/debian/rules
@@ -313,18 +313,18 @@ qemu-builds += microvm
 endif
 
 ##############################################
-# xen build
-configure-xen: b/xen/configured
-b/xen/configured: configure
-	# system build for qemu-system-x86-xen
+# ubuntu-xen build
+configure-ubuntu-xen: b/ubuntu-xen/configured
+b/ubuntu-xen/configured: configure
+	# system build for qemu-system-x86-xen (ubuntu package)
 	# like the normal system build, but with:
 	#  --enable-xen
 	#  --disable-linux-user (not needed for this binary)
 	#  reduced --target-list as needed for xen
-	#    xen usually only used on x86, skip other architectures
+	#    xen with qemu is only used on x86, skip other architectures
 	#    (could in theory also enable arm/aarch64)
-	rm -rf b/xen; mkdir -p b/xen
-	cd b/xen && \
+	rm -rf b/ubuntu-xen; mkdir -p b/ubuntu-xen
+	cd b/ubuntu-xen && \
 	    ../../configure ${common_configure_opts} \
 		--disable-user \
 		--disable-docs \
@@ -336,23 +336,23 @@ b/xen/configured: configure
 		    $(DEB_HOST_ARCH_OS)-$(DEB_HOST_ARCH) debian/control) \
 		${QEMU_CONFIGURE_OPTIONS}
 	touch $@
-build-xen: b/xen/built
-b/xen/built: b/xen/configured
-	$(MAKE) -C b/xen V=${V} qemu-system-i386 qemu-system-x86_64
+build-ubuntu-xen: b/ubuntu-xen/built
+b/ubuntu-xen/built: b/ubuntu-xen/configured
+	$(MAKE) -C b/ubuntu-xen V=${V} qemu-system-i386 qemu-system-x86_64
 	touch $@
-install-xen: b/xen/built
+install-ubuntu-xen: b/ubuntu-xen/built
 	mkdir -p debian/qemu-system-x86-xen/usr/bin/
 	mkdir -p debian/qemu-system-x86-xen/usr/share/man/man1/
-	cp b/xen/x86_64-softmmu/qemu-system-x86_64 debian/qemu-system-x86-xen/usr/bin/
-	cp b/xen/i386-softmmu/qemu-system-i386     debian/qemu-system-x86-xen/usr/bin/
+	cp b/ubuntu-xen/x86_64-softmmu/qemu-system-x86_64 debian/qemu-system-x86-xen/usr/bin/
+	cp b/ubuntu-xen/i386-softmmu/qemu-system-i386     debian/qemu-system-x86-xen/usr/bin/
 	echo ".so man1/qemu-system.1" > debian/qemu-system-x86-xen/usr/share/man/man1/qemu-system-x86_64.1
 	echo ".so man1/qemu-system.1" > debian/qemu-system-x86-xen/usr/share/man/man1/qemu-system-i386.1
 	dh_link -pqemu-system-x86-xen usr/share/doc/qemu-system-common usr/share/doc/qemu-system-x86-xen/common
 	# compat link to what libxen-dev reports where to find the binaries
 	dh_link -pqemu-system-x86-xen /usr/bin/qemu-system-i386 /usr/lib/xen/bin/qemu-system-i386
-# build xen version only on ubuntu on amd64 if system build is enabled
+# build ubuntu-xen version only on ubuntu on amd64 if system build is enabled
 ifeq (${VENDOR}-${DEB_HOST_ARCH}-${enable_system},UBUNTU-amd64-enable)
-qemu-builds += xen
+qemu-builds += ubuntu-xen
 endif
 
 ##############################################
