--- a/.github/workflows/lockdown.yml
+++ b/.github/workflows/lockdown.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   action:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: dessant/repo-lockdown@v2
         with:
